--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
@@ -18,13 +18,19 @@
             overflow: hidden;
         }
     </style>
+    <script src="js/three.js"></script>
+    <script src="js/three.min.js"></script>
 </head>
 <body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r76/three.min.js"></script>
-    <script src="js/VRControls.js"></script>
-    <script src="js/VREffect.js"></script>
-    <script src="js/webvr-polyfill.js"></script>
-    <script src="js/webvr-manager.js"></script>
-    <script src="js/app.js"></script>
+    <div id="container">
+
+        <script src="js/MTLLoader.js"></script>
+        <script src="js/loaders/OBJMTLLoader.js"></script>
+        <script src="js/VRControls.js"></script>
+        <script src="js/VREffect.js"></script>
+        <script src="js/webvr-polyfill.js"></script>
+        <script src="js/webvr-manager.js"></script>
+        <script src="js/app.js"></script>
+    </div>
 </body>
 </html>
