--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             overflow: hidden;
         }
     </style>
-    <script src="js/three.js"></script>
-    <script src="js/three.min.js"></script>
 </head>
 <body>
     <div id="container">
-
+        <script src="js/three.js"></script>
+        <script src="js/three.min.js"></script>
+        <script src="js/DDSLoader.js"></script>
         <script src="js/MTLLoader.js"></script>
-        <script src="js/loaders/OBJMTLLoader.js"></script>
+        <script src="js/OBJLoader.js"></script>
         <script src="js/VRControls.js"></script>
         <script src="js/VREffect.js"></script>
         <script src="js/webvr-polyfill.js"></script>
